--- a/ITPM WEB/WebContent/css/functioncss.css
+++ b/ITPM WEB/WebContent/css/functioncss.css
@@ -20,10 +20,10 @@ margin-bottom: 40px;
 }
 
 .boxx{
-  width: 85%;
+  width: 100px;
  margin-left: 50px;
-  padding: 50px;
-  height: 400px; 
+  padding: 200px;
+  height: 40px; 
 }
 .box1{
     
